# python-project

final-project/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
final-project/controllers/: __init__.py  dev_controller.py  tester_controller.py
final-project/data/: developers.json  testers.json
final-project/final_project/: main.py
final-project/models/: __init__.py  developer.py  employee.py  team_leader.py  tester.py
final-project/utils/: utils.py
